# CrravingMind

./: .gitignore  README.md  compress.py  pyproject.toml
config/: default.yaml  system_prompt.yaml
data/benchmarks/: benchmark_v1.parquet
data/sources/code/: 01_quick_sort.txt  02_merge_sort.txt  03_heap_sort.txt  04_binary_search.txt  05_linear_search.txt  07_linked_list.txt  08_trie.txt  09_heap.txt  10_hash_table.txt  11_dijkstra.txt  12_bfs.txt  13_a_star.txt  14_fibonacci.txt  15_knapsack.txt  16_prime.txt  17_matrix.txt  18_gcd.txt  19_tower_hanoi.txt  20_lru_cache.txt  21_flask_app.txt  22_requests_api.txt  23_fastapi_routing.txt  24_httpie_sessions.txt  25_black_mode.txt  26_rich_console.txt  27_click_core.txt  28_pydantic_main.txt  29_sqlmodel_main.txt  30_typer_main.txt  31_docker_compose.txt  32_terraform_main.txt  33_prometheus_rules.txt  34_grafana_api.txt  35_kubernetes_pod.txt  (+25 more)
docs/planning/: decisions.md  plan.md  project_structure.md  questions.md
docs/spec/: craving_mind_spec_v1_6_1.md  craving_mind_spec_v1_7_0.md
scripts/: build_parquet.py  calibrate.py  dashboard.py  export_best_artifact.py  fetch_all_sources.py  fetch_diverse.py  fix_missing.py  fix_volcanoes.py  generate_benchmark.py  patch_row144.py  patch_sdk.py  replace_wikipedia.py  run_experiment.py
src/craving_mind/: __main__.py
tests/: test_agent.py  test_artifact_manager.py  test_benchmark.py  test_budget.py  test_dashboard.py  test_dedup.py  test_entities.py  test_integration.py  test_orchestrator.py  test_phases.py  test_sandbox.py  test_scoring.py  test_validators.py
(+209 files in other folders)
