[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "craving-mind"
version = "0.1.0"
description = "CravingMind — computational Darwinism via resource scarcity"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "spacy>=3.7",
    "sentence-transformers>=3.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "psutil>=5.9",
    "websockets>=12.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
craving-mind = "craving_mind.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
